
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4.1 (Development, See CVS) ----
2003-04-27, Rob Hillis
  Fix translation link to user permissions after adding a new user
    - zentrack/www/admin/addUserSubmit.php 1.9
  Fix minor spelling error in add/edit user form.
    - zentrack/includes/templates/userAdd.php 1.10

2003-04-23, Rob Hillis
  Colour-code priorities for easy identification
    - zentrack/includes/templates/listTickets.php 1.11
    - zentrack/includes/templates/ticket_titleBox.php 1.7
    - zentrack/www/styles.php 1.9
  Allow admins to set a user's home bin to -All-
    - zentrack/includes/templates/userAdd.php 1.9
    - zentrack/includes/templates/userSearchForm.php 1.7
  Fix bin order in "Options->Home Bin", User search form and user edit form
    - zentrack/includes/templates/homebinForm.php 1.8
    - zentrack/includes/templates/userAdd.php 1.8
    - zentrack/includes/templates/userSearch.php 1.5
  Reactivate "users can select -All- as their default bin" feature after 2.4.0.1 release
    - zentrack/includes/templates/homebinForm.php 1.9
  Fix omitted ticket number when emailling a ticket
    - zentrack/www/actions/email.php 1.9

2003-04-22, Rob Hillis
  Allow users to select "-All-" as their default bin
    - zentrack/www/misc/homebin.php 1.5
    - zentrack/includes/templates/homebinForm.php 1.6
    - zentrack/includes/leftBins.php 1.7

----- V2.4.0.1 (2003-04-21) ----
2003-04-22, Rob Hillis
  Fix syntax error on ticket closing.
    - zentrack/includes/zenTrack.class

2003-04-21, Kato
  Fixed save config error
    - zentrack/includes/templates/configForm.php 1.4

2003-04-21, Rob Hillis
  Rename mis-spelled LISCENCE-GPL-2.0 in install/ directory
    - zentrack/install/LISCENCE-GPL-2.0 <del>